change the left-top ico

--- a/GetLocked/FormAMB.resx
+++ b/GetLocked/FormAMB.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVEIwAFNBLgBTQS4ATjooAFA9KgBRPisAUT4rAE8+
+        KwBQPisATz0rAFJKOQBTTTwAU0w7AFQ+LgBUTDoAVEY2AFRINgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEk0IgBPPCoAUkAuAFRCMABOOygAUD0qAFE+
+        KwBRPisATz4rAFA+KwBOPisATjwsAGuRhwAYAAAATz0sAFdKOgBSPTEAXFRBAHJbRwBbSDYAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJNyYASTQiAEk1IwBNOCYALhgMAFA7
+        JAJRPSgDUz4pA1M+KQNPPikDUT4qA0o9KANSPy4BTT0rDEw7KThRQTAca2dUAVRALwBkUT0AW0g1AFVD
+        MABQPi0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEk3JwBKOCYASjYlAC8A
+        AABLOCctSzkpbk89K3VQPix1UD4sdU8+LHVPPit1UT0sdk05KWhMOikpSjckfUo6KrBNPi5WU0AvDTsu
+        HQBVQzEAUT8tAE49KwBMOykAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABMOykASTcpAEo3
+        JwBQPioBSTYkM0g2JbRPPCz2UT4t+FA+LfhQPi34UD4t+FE+LfhRPy34Tjsq8U44KYJLOik+SzsszlA8
+        K+NRPSqIU0EuLUY2JQBPPSsATjwrAE07KQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVEg2AEMx
+        KQBCMCoASzonAEk3KChGNiazTzwr/FI+Lf9QPi3/UD4t/1A+Lf9QPi3/Uj4t/04+K/9SPyz/UTsr0kw8
+        KjtPPS1RUz0s1VE+LPlMPCq2Tj0sNFJAKQFOPSsATTsqAEw7KQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABUSTcAgHlEAE8+KwBNOyoOSzopgU49LPVRPi3/UT4t/1A+Lf9QPi3/UD4t/1A+Lf9QPiz/UD8s/1A+
+        Lf9PPSz4TjsqgFI/KgxRPixSTj0s01E9LP1NOyu2SjkoK0k4JwBSQC4AWUY0AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAFVNOgBNPC0AUUU7AUs6KVJOPCvhUT8u/089LP9QPi3/UD4t/1A+Lf9QPi3/UD4t/1A+
+        Lf9RPy3/UD4t/1A+Lf9KOCe1STclHlRGLwNMOSlQTzsr0k88LPZLOSiFTTsqD0o4KABeSzoAVEIwAAAA
+        AAAAAAAAAAAAAAAAAABUSDYAU0IxAE8+LQBQPy4RTDopoE89LP5QPi3/Tz0s/1A+Lf9QPi3/UD4t/1A+
+        Lf9QPi3/UD4t/1A+Lf9QPi3/UD4t/0o3J95INiY9SzooAFNALgRNOiplTzwr7U07KeJNPCpMIBQJAFhF
+        MgBSPy0ATjwqAAAAAAAAAAAAAAAAAFJEMgBYRTUATTspAFNALzJPPSvOUT8u/1A+Lf9QPi3/Tz0s/1A+
+        Lf9QPi3/UD4t/1A+Lf9QPi3/UD4t/1A+Lf9QPi3/Szko4Ek3J0BMOigATDopAEs5KR5NOymzUD4q+Ew8
+        KoRYRzMJU0IvAFA+KwBNOykAAAAAAAAAAABONiQAUkMwAFJALwBURDMJTTspflA+LPZPPSz7Tjwr+lA+
+        Lf9QPi3/UD4t/1A+Lf9QPi3/UD4t/1A+Lf9QPi3/UT4t/1A+Lf9NOyrgTDopP007KABQPisAWEUwAk08
+        KWZQPiryTT0rzk48KzROPS0ASzooAE48KgAAAAAAAAAAAE4zIgBQUj4ATjwpAE47KR9NOii8UD0r+k47
+        KqdMOCemUT0r+FA/Lv9RPi3/Tz4t/08+Lf9PPi3/UD4t/1A+Lf9QPi3/UT4t/089LOBRPy4/V0UyAEw6
+        KQBRPysAUD4qNk48KdNPPSv0TjwraVA3IgJOOigATDssAFZEOAAAAAAATjgmAE03JQB1lIIATzsoUFE9
+        KedRPivoTTopTE05KFJQPSvrUD8t/1I/Lv9QPiz/UT4s/1A9LP9QPi3/UD4t/089LP9QPi3/UD4t4FFA
+        Lj9XQzMASz0qAE06JwBNOigRTDknoU88Kf1QPSysU0AuGlRBLwBZRC4AVEI2AAAAAABWQS0AVkEtAH5f
+        SAFNOiddTTon2kw5J5RSPi0YTzwsTVE+LulPPy3/UD4t/1E+Lf9SPiz/UD4t/089Lf9PPi3/UkMx/1JB
+        MP9QPSzgUD4sP1M+LgBMPioAUDwqAFhCMAJLOSdeTzwq6089K+5KOShzUT8xCk89LgBUQjUAAAAAAF1F
+        NABjSy8AQzQsAFpELh9RPixJTjsqHWRNOwBWPC9PUz0u6U49K/9gUEH/V0c4/049K/9gUUL/X04//008
+        K/9mWUf/YlJB/048K+BNPSs/TzsrAEs/KwDiu6gATT0sAFNCMBhMPCuXTT0r+k89K8BVQjMgU0EyAFdC
+        NAAAAAAAXkY0AFM+LABWPy4JUDwqXFVALJ1WQS1nXUgyCVQ7KU5QOynpTT0r/3ZpW/9kVUf/TDop/3Zo
+        W/91ZFb/TDko/3lrXv9xYlX/TToo4Es6KD9KNiQATT4rAFxJNgBXRzMATDYpAE49LElRPiznUj4rxlE+
+        KyJQPSoAVkEwAAAAAABONygASzYnAEw2JxxINCW6Tzoo/088KqVfTj0PTTkhTk47JulPPSz/g3Vn/21e
+        UP9LOSj/fG5h/31tXv9MOSj/fnBl+HdpXflMOSfgSzcjP0k2HwBNOScAW0g1AFxIMwBaRDUAWEIxQ1U/
+        LOVSPCrFUTspIk85JgBaQjMAAAAAAEgzJABLNycASjYmHUs3J7tROyr/VEIxwllJOTpMOSJPTTom6VA8
+        LP+KfXD/c2VX/0w6J/99cGT/gXJk/0w7Kf1mVkixZldIok06KNpLOCVARS4XAFNDNQBRQS8AQzEnAFA+
+        LxhQPS54Uj0s71A6KcVQOikiTTclAFtDNAAAAAAASDYlAE46KABNOScJTTkpgFI9KvdRPi37UD8wj0s5
+        I1NJOCTpTj0r/5CEeP94al3/TToo/3xwZP+Edmr/TT0r/FFALYRRQC9kUEAv2E8/LkFMOiYATj4tAFRE
+        LwBXRTIeTDoplUo5KexQPC3/UDopwFY+LiBTPCsAW0MzAAAAAABINSQAZ047AEQzHQBZQy4rUDwps088
+        K/1QPi2cRzYiQEk3JNdOPCv/lIh+/3xuY/9LOSf/fG9k/4d5bf9PPSr8UkArhVI/L15SQDC6UkMzLlVD
+        MABJNycASDsoH0w7LJlRPSz1UD8r/0w6K+hMNihzWD8uClQ8LABbQjAAAAAAAEY1IwBbRTEAVz8rAABA
+        iQBPOik5Szknz1A+K6VKOigjTDkoqlA8LP+Yi4H/fnFm/0s6KP97bmL/i3ty/1M8LPxRPiuHUjsrKVM+
+        LzpTPy4mUz4sQ0w7KU1IOiifSjsr9lE+Lf9OPSv5STgojEw7LBBQPy4AYl9AAFtCMQAAAAAAYUg2AFhC
+        LgBTPCoATzgpAE43KBhROyu2UTsrq088LCNRPi+jUT4t/5iNgv+Ac2j/Szgm/3lsYP6LgHP9UT0q/FE+
+        KodUPi8ZUz0sbFA7KbhTPSvjUT4s6E4+K/lPPiz/UT4t/1E+LPNPPCtlxrZoAFNALQBRNigAXkUyAAAA
+        AAAAAAAASDYkAEw0JgBPNykATjcpF1A5KrJONSatTDUmI0o6KqFOPSv+mZCF+YBzaP9OOSj/a15R43Vq
+        WsRPPin4Tj0qg048LCpPPCzGUz8u/1I+LP9RPi3/Uj4u/08+LP9PPi3/UDop8VA7KWJHOhoBTjomAE06
+        JwAAAAAAAAAAAAAAAAAAAAAATjYpAE01KABQNyoISTMmhUw1J9RLNypFRzgoWE9AL56noZaGcmNV2U46
+        J/9URDWvXlFBTk8+K5xMPCpESTkqTUs7LORQPi//Tz4t/1A+Lv9RPi3/Tz4t/08+LP9POifTTTonN003
+        IgBMOikATTspAAAAAAAAAAAAAAAAAAAAAABNNSkATDMlAFVYSQBNOitYTTor7kk6LcdJOipNTz8tOF5P
+        PyZVQi5aTTonoVVCMEZaSTQdUT8qOEs8K0JNPCuxUD4s/VA+Lf9QPi3/UD4t/1A+Lf9PPy7/Tz4s/1A/
+        LbdWRTQaVEQyAFJBLwBNOykAAAAAAAAAAAAAAAAAAAAAAE42KgBNOSgATjwrAE47KjBOOinKUD0s/089
+        K+ZKOijZSDkpwEg4KVJTQS42TDooRU88J6pNOibYTTwq4U8+LfpRPi3/UD4t/1A+Lf9QPi3/UD4t/1A+
+        Lf9QPi35TDsrh1ZGNgpTQjIAV0k4AE48KgAAAAAAAAAAAAAAAAAAAAAAAAAAAE47KQBPPCsAUD8sCE46
+        KXtTPCv2Uz8r/08/LP9QPSz/TTwr6E07K9ZOPCvhUT4r/FM/LP9RPiz/Uj4t/1E+Lf9QPi3/UD4t/1A+
+        Lf9QPi7/UT4t/047KeRRQC9OFgAAAFpNOgBVRjUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATjwqAF9G
+        PQBIMx8AUToqKk86K7VQPSv9UD8t/1E+Lv9RPi7/Tz4t/1A+Lv9PPi3/Tz4u/1A+Lf9RPiz/UD0s/1A9
+        Lv9QPi7/Tz4t/08+Lf9PPSzrTjopfE47KhFHMCAAcG5bAFtOPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABOPCoAUj4uAFE/LgBXSTUBTjwrNE89K6pSPi3rUj4t/1E9Lf9SPy7/Uj4t/1E+Lf9QPi3/UT4u/1A+
+        Lv9QPi3/UT8t/1A+LP9RPiz/UDwq5049LHpQQDEQUT4sAHikowBhWEYAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABPPSwAUD4sAFA+LABURS8BUT0sHFE8LF1QPS2tTjwsz047LOhOOir5Tzsr+U47
+        K/lMOir5TDoq+U06KelNOynPTz0szko4J7FSPSxfU0AuEE9ALwA6KiIARTotAEkzIgAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEw7KQBMOykATz0rAFE/LQBQPSwASDUlAlA9LhhMOywrSzgoVUw5
+        KXlMOSp6TDkpekk2J3pJNiZ5SzcnV0k2KCtNPCspUj4sGlpBMANOPSsA/73/AFU9LABKOy0AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEw7KQBOPSsATT0qAFA5KwBNOikAUT0uAEs5
+        KwBLNR4BSzcpBE06LQRJNSgESDMmBEg0JwRFNSEBSDYnAFA+LQBRPSwAVD0sAAAMAABgRDIATD8tAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/gAA//wAAD/4AAAf+AAAD/AAAA/gAAAH4AAAB+AAAAPAAAABgAAAAYAA
+        AAGAAAAAgAAAAIAAAACAAAAAgAAAAIAAAACAAAAAgAAAAIAAAACAAAAAgAAAAMAAAADgAAAB4AAAAeAA
+        AAHwAAAD8AAAA/AAAAf4AAAH+AAAD/wAAB8=
+</value>
+  </data>
 </root>
